--- a/functions/package.json
+++ b/functions/package.json
@@ -3,16 +3,18 @@
   "description": "Cloud Functions for Firebase",
   "scripts": {
     "lint": "eslint",
+    "serveAll": "firebase emulators:start",
     "serve": "firebase emulators:start --only functions",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "build": "npm run lint && tsc"
   },
   "engines": {
     "node": "14"
   },
-  "main": "index.js",
+  "main": "lib/index.js",
   "dependencies": {
     "firebase-admin": "^9.8.0",
     "firebase-functions": "^3.14.1"
